added adaptive for desktop (front-page and projects)

--- a/index.html
+++ b/index.html
@@ -33,86 +33,102 @@
             <span class="menu-global menu-bottom"></span>
           </div>
         </nav>
-        <h1 class="front-page-my-name">[Alex Lomov]</h1>
-        <h2 class="section-title">
-          <span class="front-page-profession-part-1">{FRONTEND}</span>
-          <span class="front-page-profession-part-2"> _DEVELOPER</span>
-        </h2>
-        <p class="front-page-description">
-          / Using HTML, CSS, JavaScript, React Native and Node.js I help to
-          build websites, small and medium web apps for business
-        </p>
-        <button class="my-works-btn">See my recent works —</button>
-        <div class="front-page-my-info">
-          <img class="my-photo" src="img/my-photo.jpg" alt="photo" />
-          <div class="front-page-my-resume">
-            <h3 class="about-me mobile-element">about me in 2 minutes</h3>
-            <h3 class="about-me tablet-element">
-              about me<br />
-              in 2 minutes
-            </h3>
-            <h3 class="about-me desktop-element">about me in 2 minutes</h3>
-            <button class="about-me-btn">
-              <img
-                class="about-me-btn--icon"
-                src="img/About me/Polygon 1.svg"
-                alt="play-icon"
-              />Play
-            </button>
+        <div class="front-page-wrapper">
+          <div class="my-page-main-info">
+            <img
+              class="my-photo desktop-element"
+              src="img/my-photo.jpg"
+              alt="photo"
+            />
+            <h1 class="front-page-my-name">[Alex Lomov]</h1>
+            <h2 class="section-title">
+              <span class="front-page-profession-part-1">{FRONTEND}</span>
+              <span class="front-page-profession-part-2"> _DEVELOPER</span>
+            </h2>
+            <p class="front-page-description">
+              / Using HTML, CSS, JavaScript, React Native and Node.js I help to
+              build websites, small and medium web apps for business
+            </p>
+            <a href="#projects" class="my-works-btn">See my recent works —</a>
+          </div>
+          <div class="front-page-my-info">
+            <img
+              class="my-photo tablet-element"
+              src="img/my-photo.jpg"
+              alt="photo"
+            />
+            <div class="front-page-my-resume">
+              <h3 class="about-me mobile-element">about me in 2 minutes</h3>
+              <h3 class="about-me tablet-element desktop-element">
+                about me<br />
+                in 2 minutes
+              </h3>
+              <button class="about-me-btn">
+                <img
+                  class="about-me-btn--icon"
+                  src="img/About me/Polygon 1.svg"
+                  alt="play-icon"
+                />Play
+              </button>
+            </div>
+          </div>
+          <img class="laptop-img" src="img/laptop.svg" alt="laptop" />
+          <div class="experience-wrapper">
+            <div class="experience-container">
+              <h3 class="about-me my-skills">My Coding Skills & Experience</h3>
+              <ul class="my-skills-list">
+                <li>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  HTML
+                </li>
+                <li>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  CSS
+                </li>
+                <li>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle circle--black"></i>
+                  JavaScript
+                </li>
+                <li>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle circle--black"></i>
+                  <i class="far fa-circle circle--black"></i>
+                  React
+                </li>
+                <li>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle circle--black"></i>
+                  <i class="far fa-circle circle--black"></i>
+                  <i class="far fa-circle circle--black"></i>
+                  Node
+                </li>
+                <li>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle"></i>
+                  <i class="far fa-circle circle--black"></i>
+                  <i class="far fa-circle circle--black"></i>
+                  <i class="far fa-circle circle--black"></i>
+                  React Native
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-        <img class="laptop-img" src="img/laptop.svg" alt="laptop" />
-        <h3 class="about-me my-skills">My Coding Skills & Experience</h3>
-        <ul class="my-skills-list">
-          <li>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            HTML
-          </li>
-          <li>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            CSS
-          </li>
-          <li>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle circle--black"></i>
-            JavaScript
-          </li>
-          <li>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle circle--black"></i>
-            <i class="far fa-circle circle--black"></i>
-            React
-          </li>
-          <li>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle circle--black"></i>
-            <i class="far fa-circle circle--black"></i>
-            <i class="far fa-circle circle--black"></i>
-            Node
-          </li>
-          <li>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle"></i>
-            <i class="far fa-circle circle--black"></i>
-            <i class="far fa-circle circle--black"></i>
-            <i class="far fa-circle circle--black"></i>
-            React Native
-          </li>
-        </ul>
       </section>
       <!-- FRONT PAGE END -->
       <!-- ABOUT PAGE -->
@@ -143,106 +159,108 @@
       <!-- PERSONAL PROJECTS -->
       <section class="my-projects" id="projects">
         <h2 class="section-title">My personal _projects</h2>
-        <div class="project-item">
-          <div class="project-slider">
-            <div class="dots">
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
+        <div class="my-project-items-wrapper">
+          <div class="project-item">
+            <div class="project-slider">
+              <div class="dots">
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+              </div>
+              <img
+                src="/img/projects/personal/full-stack.jpg"
+                alt="first-project"
+              />
             </div>
-            <img
-              src="/img/projects/personal/full-stack.jpg"
-              alt="first-project"
-            />
-          </div>
-          <div class="project-tech">
-            <span>
-              <i class="fas fa-laptop-code personal-project-icon"></i
-              >Technology: HTML5, CSS3, JS
-            </span>
-            <button
-              class="my-works-btn show-more--btn"
-              id="personal-project-full-stack-btn"
-            >
-              More details —
-            </button>
-          </div>
-          <span class="item-end"></span>
-        </div>
-        <div class="project-item">
-          <div class="project-slider">
-            <div class="dots">
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
+            <div class="project-tech">
+              <span>
+                <i class="fas fa-laptop-code personal-project-icon"></i
+                >Technology: HTML5, CSS3, JS
+              </span>
+              <button
+                class="my-works-btn show-more--btn"
+                id="personal-project-full-stack-btn"
+              >
+                More details —
+              </button>
             </div>
-            <img
-              src="/img/projects/personal/wedding.jpg"
-              alt="second-project"
-            />
+            <span class="item-end"></span>
           </div>
-          <div class="project-tech">
-            <span>
-              <i class="fas fa-laptop-code personal-project-icon"></i
-              >Technology: HTML, CSS, JavaScript, PHP
-            </span>
-            <button
-              class="my-works-btn show-more--btn"
-              id="personal-project-wedding-project-btn"
-            >
-              More details —
-            </button>
-          </div>
-          <span class="item-end"></span>
-        </div>
-        <div class="project-item">
-          <div class="project-slider">
-            <div class="dots">
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
+          <div class="project-item">
+            <div class="project-slider">
+              <div class="dots">
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+              </div>
+              <img
+                src="/img/projects/personal/wedding.jpg"
+                alt="second-project"
+              />
             </div>
-            <img
-              src="/img/projects/personal/pro-test.jpg"
-              alt="third-project"
-            />
-          </div>
-          <div class="project-tech">
-            <span>
-              <i class="fas fa-laptop-code personal-project-icon"></i
-              >Technology: React.js, Node.js
-            </span>
-            <button
-              class="my-works-btn show-more--btn"
-              id="personal-project-pro-test-btn"
-            >
-              More details —
-            </button>
-          </div>
-          <span class="item-end"></span>
-        </div>
-        <div class="project-item">
-          <div class="project-slider">
-            <div class="dots">
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
+            <div class="project-tech">
+              <span>
+                <i class="fas fa-laptop-code personal-project-icon"></i
+                >Technology: HTML, CSS, JavaScript, PHP
+              </span>
+              <button
+                class="my-works-btn show-more--btn"
+                id="personal-project-wedding-project-btn"
+              >
+                More details —
+              </button>
             </div>
-            <img src="/img/projects/personal/goit.jpg" alt="fourth-project" />
+            <span class="item-end"></span>
           </div>
-          <div class="project-tech">
-            <span>
-              <i class="fas fa-laptop-code personal-project-icon"></i
-              >Technology: HTML, CSS, JavaScript, Wordpress
-            </span>
-            <button
-              class="my-works-btn show-more--btn"
-              id="personal-project-goit-btn"
-            >
-              More details —
-            </button>
+          <div class="project-item">
+            <div class="project-slider">
+              <div class="dots">
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+              </div>
+              <img
+                src="/img/projects/personal/pro-test.jpg"
+                alt="third-project"
+              />
+            </div>
+            <div class="project-tech">
+              <span>
+                <i class="fas fa-laptop-code personal-project-icon"></i
+                >Technology: React.js, Node.js
+              </span>
+              <button
+                class="my-works-btn show-more--btn"
+                id="personal-project-pro-test-btn"
+              >
+                More details —
+              </button>
+            </div>
+            <span class="item-end"></span>
           </div>
-          <span class="item-end"></span>
+          <div class="project-item">
+            <div class="project-slider">
+              <div class="dots">
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+              </div>
+              <img src="/img/projects/personal/goit.jpg" alt="fourth-project" />
+            </div>
+            <div class="project-tech">
+              <span>
+                <i class="fas fa-laptop-code personal-project-icon"></i
+                >Technology: HTML, CSS, JavaScript, Wordpress
+              </span>
+              <button
+                class="my-works-btn show-more--btn"
+                id="personal-project-goit-btn"
+              >
+                More details —
+              </button>
+            </div>
+            <span class="item-end"></span>
+          </div>
         </div>
       </section>
       <!-- PERSONAL PROJECTS END -->
@@ -250,51 +268,53 @@
       <section class="my-team-projects">
         <span class="substrate">team</span>
         <h2 class="section-title">Teamwork _projects</h2>
-        <div class="project-item">
-          <div class="project-slider">
-            <div class="dots">
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
+        <div class="my-team-projects-items-wrapper">
+          <div class="project-item">
+            <div class="project-slider">
+              <div class="dots">
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+              </div>
+              <img src="/img/projects/team/questify.jpg" alt="first-project" />
             </div>
-            <img src="/img/projects/team/questify.jpg" alt="first-project" />
-          </div>
-          <div class="project-tech">
-            <span>
-              <i class="fas fa-laptop-code personal-project-icon"></i
-              >Technology: HTML5, CSS3, JS
-            </span>
-            <button
-              class="my-works-btn show-more--btn"
-              id="team-project-questify-btn"
-            >
-              More details —
-            </button>
-          </div>
-          <span class="item-end"></span>
-        </div>
-        <div class="project-item">
-          <div class="project-slider">
-            <div class="dots">
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
-              <i class="fas fa-circle project-dot"></i>
+            <div class="project-tech">
+              <span>
+                <i class="fas fa-laptop-code personal-project-icon"></i
+                >Technology: HTML5, CSS3, JS
+              </span>
+              <button
+                class="my-works-btn show-more--btn"
+                id="team-project-questify-btn"
+              >
+                More details —
+              </button>
             </div>
-            <img src="/img/projects/team/it-test.jpg" alt="second-project" />
+            <span class="item-end"></span>
           </div>
-          <div class="project-tech">
-            <span>
-              <i class="fas fa-laptop-code personal-project-icon"></i
-              >Technology: HTML5, CSS3, JS
-            </span>
-            <button
-              class="my-works-btn show-more--btn"
-              id="team-project-it-test-btn"
-            >
-              More details —
-            </button>
+          <div class="project-item">
+            <div class="project-slider">
+              <div class="dots">
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+                <i class="fas fa-circle project-dot"></i>
+              </div>
+              <img src="/img/projects/team/it-test.jpg" alt="second-project" />
+            </div>
+            <div class="project-tech">
+              <span>
+                <i class="fas fa-laptop-code personal-project-icon"></i
+                >Technology: HTML5, CSS3, JS
+              </span>
+              <button
+                class="my-works-btn show-more--btn"
+                id="team-project-it-test-btn"
+              >
+                More details —
+              </button>
+            </div>
+            <span class="item-end"></span>
           </div>
-          <span class="item-end"></span>
         </div>
       </section>
       <!-- TEAM PROJECTS END -->
