added adaptive for desktop (about-me-section)

--- a/index.html
+++ b/index.html
@@ -133,25 +133,36 @@
       <!-- FRONT PAGE END -->
       <!-- ABOUT PAGE -->
       <section class="about-page" id="about">
-        <h2 class="section-title page-title">I code things from scratch_</h2>
-        <p class="about-me--title">
-          <span>[and help to</span>
-          <span>create great web</span>
-          <span>apps]</span>
-        </p>
-        <div class="web-illustration">
-          <span>web</span>
-          <img src="/img/web-illustration.png" alt="web-illustration-laptop" />
-          <div class="about-me--text">
-            <p>
-              / I will help you to create a high-performance Landing Page,
-              functional corporate website for your business, interactive web
-              app for SaaS, startup, or other services.
-            </p>
-            <p>
-              / My specialization is front-end development — client side of the
-              web. But I also have full-stack developer experience.
-            </p>
+        <div class="about-page-wrapper">
+          <h2 class="section-title page-title">I code things from scratch_</h2>
+          <p class="about-me--title">
+            <span>[and help to</span>
+            <span>create great web</span>
+            <span>apps]</span>
+          </p>
+          <div class="web-illustration">
+            <span>web</span>
+            <img
+              src="/img/web-illustration.png"
+              alt="web-illustration-laptop"
+            />
+            <div class="about-me--text">
+              <p>
+                / I will help you to create a high-performance Landing Page,
+                functional corporate website for your business, interactive web
+                app for SaaS, startup, or other services.
+              </p>
+              <p>
+                / My specialization is front-end development — client side of
+                the web. But I also have full-stack developer experience.
+              </p>
+            </div>
+          </div>
+          <div class="about-projects desktop-element">
+            <div class="about-projects-bar">
+              <p class="about-projects-count">10+</p>
+            </div>
+            <p class="about-projects-text">completed projects</p>
           </div>
         </div>
       </section>
