--- a/index.html
+++ b/index.html
@@ -337,24 +337,26 @@
             <p class="form-description">
               Leave a request to discuss the task and technical requirements
             </p>
-            <input
-              type="text"
-              class="callback-form-input"
-              placeholder="Name"
-              id="callback-form-input-name"
-            />
-            <input
-              type="email"
-              class="callback-form-input"
-              placeholder="Email"
-              id="callback-form-input-email"
-            />
-            <input
-              type="tel"
-              class="callback-form-input"
-              placeholder="+380 () ___ - __ - __"
-              id="callback-form-input-phone"
-            />
+            <div class="callback-form-input-wrapper">
+              <input
+                type="text"
+                class="callback-form-input"
+                placeholder="Name"
+                id="callback-form-input-name"
+              />
+              <input
+                type="email"
+                class="callback-form-input"
+                placeholder="Email"
+                id="callback-form-input-email"
+              />
+              <input
+                type="tel"
+                class="callback-form-input"
+                placeholder="+380 () ___ - __ - __"
+                id="callback-form-input-phone"
+              />
+            </div>
             <input
               type="submit"
               class="callback-form-submit"
@@ -366,133 +368,135 @@
       <!-- CALLBACK FORM END-->
       <!-- CALCULATOR -->
       <section class="calculator" id="calculator">
-        <div class="calculator-info">
-          <h2 class="calculator-title">
-            Calculate_ <br class="line-break" />the cost of a future project
-          </h2>
-          <p class="calculator-descr">
-            <span>This is an</span>
-            <span class="calculator-descr-accent">approximate</span>
-            <span>calculation.</span>
-          </p>
-          <div class="tablet-width">
+        <div class="calculator-wrapper">
+          <div class="calculator-info">
+            <h2 class="calculator-title">
+              Calculate_ <br class="line-break" />the cost of a future project
+            </h2>
+            <p class="calculator-descr">
+              <span>This is an</span>
+              <span class="calculator-descr-accent">approximate</span>
+              <span>calculation.</span>
+            </p>
+            <div class="tablet-width">
+              <img
+                class="calculator-img tablet-width-img"
+                src="/img/calculator.svg"
+                alt="calculator"
+              />
+              <p class="tablet-width-p">
+                / The final cost depends on the technical requirements, terms,
+                specifics of your project.
+              </p>
+            </div>
             <img
-              class="calculator-img tablet-width-img"
+              class="calculator-img"
               src="/img/calculator.svg"
               alt="calculator"
             />
-            <p class="tablet-width-p">
+            <p>
               / The final cost depends on the technical requirements, terms,
               specifics of your project.
             </p>
           </div>
-          <img
-            class="calculator-img"
-            src="/img/calculator.svg"
-            alt="calculator"
-          />
-          <p>
-            / The final cost depends on the technical requirements, terms,
-            specifics of your project.
-          </p>
+          <form action="" class="calculator-form">
+            <div class="calculator-form-input">
+              <label
+                for="calculator-form-website-type"
+                class="calculator-form-title"
+                >What should be done:</label
+              >
+              <select
+                name="website-type"
+                id="calculator-form-website-type"
+                class="calculator-form-select"
+              >
+                <option value="landing-page:600" selected>Landing Page</option>
+                <option value="website:1000">Website</option>
+                <option value="cms:2000">CMS</option>
+                <option value="portal:3000">Portal</option>
+                <option value="e-shop:2000">Online Shop</option>
+              </select>
+            </div>
+            <div class="calculator-form-input">
+              <label
+                for="calculator-form-technologies"
+                class="calculator-form-title"
+                >Choose preferred technologies
+              </label>
+              <select
+                name="technologies"
+                id="calculator-form-technologies"
+                class="calculator-form-select"
+                multiple
+              >
+                <option value="html:500" selected>HTML</option>
+                <option value="css:500" selected>CSS</option>
+                <option value="js:700" selected>JavaScript</option>
+                <option value="react:1000">React</option>
+                <option value="angular:1000">Angular</option>
+                <option value="php:2000">PHP</option>
+              </select>
+            </div>
+            <div class="calculator-form-input">
+              <label for="" class="calculator-form-title"
+                >Personal account and shopping cart:
+              </label>
+              <div class="radio-container" id="radio-container-cart">
+                <input
+                  type="radio"
+                  id="radio-yes-one"
+                  class="calculator-form-radio"
+                  name="cart"
+                  value="yes"
+                  checked
+                />
+                <label for="radio-yes-one" class="radio-label">Yes </label>
+                <input
+                  type="radio"
+                  id="radio-no-one"
+                  class="calculator-form-radio"
+                  name="cart"
+                  value="no"
+                />
+                <label for="radio-no-one" class="radio-label">No </label>
+              </div>
+            </div>
+            <div class="calculator-form-input">
+              <label for="" class="calculator-form-title"
+                >Requests reception on your email:
+              </label>
+              <div class="radio-container" id="radio-container-reception">
+                <input
+                  type="radio"
+                  id="radio-yes-two"
+                  class="calculator-form-radio"
+                  name="reception"
+                  value="yes"
+                  checked
+                />
+                <label for="radio-yes-two" class="radio-label">Yes </label>
+                <input
+                  type="radio"
+                  id="radio-no-two"
+                  class="calculator-form-radio"
+                  name="reception"
+                  value="no"
+                />
+                <label for="radio-no-two" class="radio-label">No </label>
+              </div>
+            </div>
+            <div class="calculator-form-input">
+              <p class="calculator-form-total">Cost:</p>
+              <p class="calculator-form-total-cost">350$</p>
+            </div>
+            <input
+              type="submit"
+              class="callback-form-submit"
+              value="Find out the cost  —"
+            />
+          </form>
         </div>
-        <form action="" class="calculator-form">
-          <div class="calculator-form-input">
-            <label
-              for="calculator-form-website-type"
-              class="calculator-form-title"
-              >What should be done:</label
-            >
-            <select
-              name="website-type"
-              id="calculator-form-website-type"
-              class="calculator-form-select"
-            >
-              <option value="landing-page:600" selected>Landing Page</option>
-              <option value="website:1000">Website</option>
-              <option value="cms:2000">CMS</option>
-              <option value="portal:3000">Portal</option>
-              <option value="e-shop:2000">Online Shop</option>
-            </select>
-          </div>
-          <div class="calculator-form-input">
-            <label
-              for="calculator-form-technologies"
-              class="calculator-form-title"
-              >Choose preferred technologies
-            </label>
-            <select
-              name="technologies"
-              id="calculator-form-technologies"
-              class="calculator-form-select"
-              multiple
-            >
-              <option value="html:500" selected>HTML</option>
-              <option value="css:500" selected>CSS</option>
-              <option value="js:700" selected>JavaScript</option>
-              <option value="react:1000">React</option>
-              <option value="angular:1000">Angular</option>
-              <option value="php:2000">PHP</option>
-            </select>
-          </div>
-          <div class="calculator-form-input">
-            <label for="" class="calculator-form-title"
-              >Personal account and shopping cart:
-            </label>
-            <div class="radio-container" id="radio-container-cart">
-              <input
-                type="radio"
-                id="radio-yes-one"
-                class="calculator-form-radio"
-                name="cart"
-                value="yes"
-                checked
-              />
-              <label for="radio-yes-one" class="radio-label">Yes </label>
-              <input
-                type="radio"
-                id="radio-no-one"
-                class="calculator-form-radio"
-                name="cart"
-                value="no"
-              />
-              <label for="radio-no-one" class="radio-label">No </label>
-            </div>
-          </div>
-          <div class="calculator-form-input">
-            <label for="" class="calculator-form-title"
-              >Requests reception on your email:
-            </label>
-            <div class="radio-container" id="radio-container-reception">
-              <input
-                type="radio"
-                id="radio-yes-two"
-                class="calculator-form-radio"
-                name="reception"
-                value="yes"
-                checked
-              />
-              <label for="radio-yes-two" class="radio-label">Yes </label>
-              <input
-                type="radio"
-                id="radio-no-two"
-                class="calculator-form-radio"
-                name="reception"
-                value="no"
-              />
-              <label for="radio-no-two" class="radio-label">No </label>
-            </div>
-          </div>
-          <div class="calculator-form-input">
-            <p class="calculator-form-total">Cost:</p>
-            <p class="calculator-form-total-cost">350$</p>
-          </div>
-          <input
-            type="submit"
-            class="callback-form-submit"
-            value="Find out the cost  —"
-          />
-        </form>
       </section>
       <!-- CALCULATOR END -->
       <!-- FOOTER -->
